# SimonStratTerminal

./: .gitignore  GITHUB_READINESS.md  LICENSE  QA_AUDIT_REPORT.md  README.md  start-dev.ps1  start-dev.sh
backend/: README.md  env.example  pyproject.toml
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: routes.py  schemas.py
backend/app/backtest/: costs.py  engine.py  metrics.py  walkforward.py
backend/app/core/: config.py  exceptions.py  logging_config.py  presets.py  timeutils.py
backend/app/data/: __init__.py  cache.py  feature_cache.py  fetcher.py  normalize.py  provider.py  stooq_provider.py  ticker_utils.py
backend/app/features/: meanreversion.py  momentum.py  volatility.py
backend/app/models/: __init__.py  ensemble.py  weight_optimizer.py
backend/scripts/: smoke_test.py  verify_nvda.py
backend/simons_trading_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: DEBUG_PLAN.md  TEST_SUMMARY.md  VERIFICATION_CHECKLIST.md  conftest.py  test_api_contract.py  test_backtest.py  test_cache_isolation.py  test_coverage_audit.md  test_critical_correctness.py  test_data_correctness_integration.py  test_date_handling.py  test_edge_cases.py  test_ensemble_fixes.py  test_feature_math.py  test_integration_checklist.py  test_leakage.py  test_math_correctness.py  test_nvda_data_verification.py  test_nvda_repro.py  test_nvda_smoke.py  test_provider_failures.py  test_providers.py  test_security.py  test_signal_math.py  test_signals.py  test_ticker_normalization.py  test_trade_pnl_calculation.py  test_volatility_correctness.py
(+11 files in other folders)
